--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
  
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>        
-        <karate.version>1.1.0</karate.version>
+        <karate.version>1.0.1</karate.version>
     </properties>    
 
     <dependencies>         
@@ -21,7 +21,48 @@
             <artifactId>karate-junit5</artifactId>
             <version>${karate.version}</version>
             <scope>test</scope>
-        </dependency>		
+        </dependency>	
+       	
+          <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+<dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>1.0.2</version>
+</dependency>
+<dependency>
+    <groupId>net.masterthought</groupId>
+    <artifactId>cucumber-reporting</artifactId>
+    <version>5.6.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-apache -->
+<dependency>
+    <groupId>com.intuit.karate</groupId>
+    <artifactId>karate-apache</artifactId>
+    <version>0.9.6</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-core -->
+<dependency>
+    <groupId>com.intuit.karate</groupId>
+    <artifactId>karate-core</artifactId>
+    <version>1.2.0.RC4</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-ui -->
+<dependency>
+    <groupId>com.intuit.karate</groupId>
+    <artifactId>karate-ui</artifactId>
+    <version>0.9.5.RC3</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.intuit.karate/karate-junit4 -->
+<dependency>
+    <groupId>com.intuit.karate</groupId>
+    <artifactId>karate-junit4</artifactId>
+    <version>1.2.0.RC4</version>
+    <scope>test</scope>
+</dependency>
+
+
+
     </dependencies>
 
     <build>
